--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       width="0"
       height="0"
       src="https://www.youtube.com/embed/4PaXHzwSoLM?autoplay=1&controls=0&loop=1&rel=0"
-      allow="accelerometer; autoplay; "
+      allow="accelerometer; autoplay; loop;"
       frameborder="0"
       allowfullscreen
     ></iframe>
